[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
authors = [
    {name = "Jinna Kiisuo", email = "jinnak@nocturnal.fi"},
]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "absl-py<3.0.0,>=2.0.0",
    "prometheus-client<1.0.0,>=0.13.0",
    "asyncio<4.0.0,>=3.4.3",
    "aiohttp<4.0,>=3.11",
    "uiprotect>=7.5.1",
]
name = "protect_exporter"
version = "0.3.0"
description = "Export UniFi Protect metrics to Prometheus"

[project.scripts]
protect_exporter = "protect_exporter.__main__:run"

[dependency-groups]
dev = [
    "flake8<7.0.0,>=6.1.0",
    "isort<6.0.0,>=5.12.0",
    "basedpyright<2.0.0,>=1.27.1",
    "black<25.0.0,>=24.3.0",
]

[tool.basedpyright]
allowedUntypedLibraries = ["absl"]
